[package]
name = "replace-all"
version = "0.1.0"
edition = "2021"
authors = ["Nils Steffen Martel"]
description = "Cli to quickly replace occurences of a word in a file"
license = "MIT"
repository = "https://github.com/nilsmartel/replace-all"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parse command line argument by defining a struct.
structopt = "0.3.26"

